# Lykon

./: .gitignore  README.md  compare_shot_actions.py  overall_similarity_summary.py  requirements.txt  ryan_shot_analysis.py  similarity_matrix.py
IMUCODE/: udp_receiver.py
IMUCODE/imu_master/main/: CMakeLists.txt  esp32_s3_szp.h  main.c
blender/: 35_import_json.py
configs/: event_pipeline.yaml  pipeline.yaml  rules.yaml  rules_v2.yaml  shot_pipeline.yaml
docs/: action_taxonomy.md  action_taxonomy_lykon.md  algorithm_plan.md  data_schema.md  data_schema_v2.md  hardware_engineer_checklist.md  video_pose_training_plan.md
imu_action/: requirements.txt  run_pipeline.py
imu_basketball_recognition/: README.md  requirements.txt
notebooks/: 01_quickstart.ipynb
scripts/: 00_check_env.py  01_generate_dummy_data.py  02_build_features.py  03_train_baseline.py  04_run_rules.py  05_create_empty_tables.py  10_hangtime_merge_and_rf.py  11_merge_meta.py  12_rule_engine_basketball.py  13_train_basketball_rf.py  14_rule_engine_v2.py  20_align_three_nodes.py  21_plot_three_nodes.py  22_detect_shot_cycles.py  23_export_shot_windows.py  24_build_shot_features.py  25_build_shot_template.py  26_build_release_detector.py  27_phase_segmentation.py  28_build_event_template.py  29_extract_video_pose.py  30_detect_pose_release_candidates.py  31_build_imu_prediction_review.py  32_extract_world_pose.py  33_build_motion_template.py  34_fuse_imu_animation.py  40_video_pose_expert_demo.py  align_white_calibration.py  calibrate_50hz.py  calibrate_split_nodes.py  calibrate_split_nodes_ryan.py  (+2 more)
(+137 files in other folders)
